--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
+install:
+  - pip3 install -r requirements.txt
+  - pip3 install coverage
 python:
   - "3.6"
   - "3.7"
   - "3.8"
-script: pytest
+script: coverage run -m pytest
+after_success: bash <(curl -s https://codecov.io/bash)>
