--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
   - "3.7"
   - "3.8"
 script: coverage run -m pytest
-after_success: bash <(curl -s https://codecov.io/bash)>
+after_success: bash <(curl -s https://codecov.io/bash)
