--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # required python packages, installed by pip3
 # could probably relax the version requirements
 # works under python 3.6.9
+numpy >= 1.16.1
 uproot >= 3.10.12
 matplotlib >= 3.1.2
 ipdb >= 0.12.3
