--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ ipdb >= 0.12.3
 scipy >= 1.3.3
 sklearn >= 0.0
 networkx >= 2.4
+pydot >= 1.4.1
 tabulate >= 0.8.6
 torch >= 1.3.1
 scikit-hep >= 0.5.1
