--- a/.coveragerc
+++ b/.coveragerc
@@ -1,53 +1,54 @@
 # .coveragerc to control coverage.py
 [run]
 # a listing of all the code that is in use right now
+#                                   finished   docstring
 include =
-    */tree_tagger/Components.py
-    */tree_tagger/Constants.py
-    */tree_tagger/DrawTrees.py
-    */tree_tagger/FormJets.py
-    */tree_tagger/FormShower.py
-    */tree_tagger/FormVertices.py
-    */tree_tagger/InputTools.py
-    */tree_tagger/JetQuality.py
-    */tree_tagger/JoinHepMCRoot.py
-    */tree_tagger/MassPeaks.py
-    */tree_tagger/PDGNames.py
-    */tree_tagger/ReadHepmc.py
-    */tree_tagger/ShapeVariables.py
-    */tree_tagger/TrueTag.py
-    */tree_tagger/CompareClusters.py
-    */tree_tagger/ParallelFormJets.py
-    */tree_tagger/PlottingTools.py
+    */tree_tagger/Components.py       #    y           y
+    */tree_tagger/Constants.py        #    y           y
+    */tree_tagger/DrawTrees.py        #    p           n
+    */tree_tagger/FormJets.py         #    p           y
+    */tree_tagger/FormShower.py       #    y           n
+    */tree_tagger/FormVertices.py     #    n           n
+    */tree_tagger/InputTools.py       #    y           y
+    */tree_tagger/JetQuality.py       #    n           n   now
+    */tree_tagger/JoinHepMCRoot.py    #    y           y
+    */tree_tagger/MassPeaks.py        #    n           n   now
+    */tree_tagger/PDGNames.py         #    y           n
+    */tree_tagger/ReadHepmc.py        #    y           n
+    */tree_tagger/ShapeVariables.py   #    n           n
+    */tree_tagger/TrueTag.py          #    y           y
+    */tree_tagger/CompareClusters.py  #    n           n   now
+    */tree_tagger/ParallelFormJets.py #    n           n   now
+    */tree_tagger/PlottingTools.py    #    n           n
 # things that should be added to this list soon
-#    */tree_tagger/RescaleJets.py
-#    */tree_tagger/Preprocessing.py
-#    */tree_tagger/Datasets.py
-#    */tree_tagger/TreeWalker.py
-#    */tree_tagger/CustomeDataloader.py
-#    */tree_tagger/CustomSampler.py
-#    */tree_tagger/CustomScheduler.py
-#    */tree_tagger/RunEvaluation.py
-#    */tree_tagger/RunLauncher.py
-#    */tree_tagger/RunTools.py
-#    */tree_tagger/TrainingTools.py
-#    */tree_tagger/OverlapPlotting.py
-#    */tree_tagger/SingleFormJets.py
+#    */tree_tagger/RescaleJets.py      #    n           n
+#    */tree_tagger/Preprocessing.py    #    n           n
+#    */tree_tagger/Datasets.py         #    n           n
+#    */tree_tagger/TreeWalker.py       #    n           n
+#    */tree_tagger/CustomeDataloader.py#    n           n
+#    */tree_tagger/CustomSampler.py    #    n           n
+#    */tree_tagger/CustomScheduler.py  #    n           n
+#    */tree_tagger/RunEvaluation.py    #    n           n
+#    */tree_tagger/RunLauncher.py      #    n           n
+#    */tree_tagger/RunTools.py         #    n           n
+#    */tree_tagger/TrainingTools.py    #    n           n
+#    */tree_tagger/OverlapPlotting.py  #    n           n
+#    */tree_tagger/SingleFormJets.py   #    n           n
 # sometime
-#    */tree_tagger/AffinityMeasures.py
-#    */tree_tagger/AreaMeasures.py
-#    */tree_tagger/CheckData.py
-#    */tree_tagger/CompareTrees.py
-#    */tree_tagger/DrawBarrel.py
-#    */tree_tagger/FormInvarVertices.py
-#    */tree_tagger/JetBDT.py
-#    */tree_tagger/LinkingEvaluation.py
-#    */tree_tagger/LinkingFramework.py
-#    */tree_tagger/LinkingLauncher.py
-#    */tree_tagger/LinkingNN.py
-#    */tree_tagger/optimise_BDT.py
-#    */tree_tagger/RecursiveNN.py
-#    */tree_tagger/SelectEvent.py
+#    */tree_tagger/AffinityMeasures.py #    n           n
+#    */tree_tagger/AreaMeasures.py     #    n           n
+#    */tree_tagger/CheckData.py        #    n           n
+#    */tree_tagger/CompareTrees.py     #    n           n
+#    */tree_tagger/DrawBarrel.py       #    n           n
+#    */tree_tagger/FormInvarVertices.py#    n           n
+#    */tree_tagger/JetBDT.py           #    n           n
+#    */tree_tagger/LinkingEvaluation.py#    n           n
+#    */tree_tagger/LinkingFramework.py #    n           n
+#    */tree_tagger/LinkingLauncher.py  #    n           n
+#    */tree_tagger/LinkingNN.py        #    n           n
+#    */tree_tagger/optimise_BDT.py     #    n           n
+#    */tree_tagger/RecursiveNN.py      #    n           n
+#    */tree_tagger/SelectEvent.py      #    n           n
 omit =
 	# don't check coverage of tests
 	*/test/*
