--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
+                  pip install pytest
                   pip install coverage
             - name: Run tests with pytest
               run: coverage run -m pytest -p no:warnings
