edited setup to include necessary requirements

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,50 @@ pyTorchTree/
 *.bk
 # swap files
 *.swp
+*.swo
 .converage
+
+*autofill_memory.csv
+
+# VS Code
+.vscode/
+
+# Spyder
+.spyproject/
+
+# Jupyter NB Checkpoints
+.ipynb_checkpoints/
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Mac OS-specific storage files
+.DS_Store
+
+# ctags
+/tags
