--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ networkx >= 2.4
 pydot >= 1.4.1
 tabulate >= 0.8.6
 torch >= 1.3.1
-scikit-hep >= 0.5.1
+scikit-hep == 0.5.1
 bokeh >= 1.4.0
 psutil >= 5.6.7
 pygit2 >= 1.2.1
