--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ pyTorchTree/
 *.swp
 *.swo
 .converage
+# files created while making c executables
+*.cpython-36m-x86_64-linux-gnu.so
 
 *autofill_memory.csv
 
