--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ scikit-hep == 0.5.1
 bokeh >= 1.4.0
 psutil >= 5.6.7
 pygit2 >= 1.2.1
+nevergrad >= 0.4.2
+abcpy  # not sure which version because pypi is down :(
