--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,5 @@ bokeh >= 1.4.0
 psutil >= 5.6.7
 pygit2 >= 1.2.1
 nevergrad >= 0.4.2
+mpi4py >= 3.0.3  # needed for abcpy, but abcpy is bad at installing it
 abcpy  # not sure which version because pypi is down :(
