--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
             - name: Install dependancies
               run: |
                   python -m pip install --upgrade pip
+                  pip install mpi4py
                   pip install -r requirements.txt
                   pip install pytest
                   pip install coverage
