--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
                   python-version: 3.6
             - name: Install dependancies
               run: |
+                  apt install libopenmpi-dev
+                  pip install mpi4pi
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
                   pip install pytest
