--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ uproot == 3.10.12
 awkward == 0.13.0
 numpy >= 1.16.1
 matplotlib >= 3.1.2
-ipdb >= 0.12.3
+#ipdb >= 0.12.3
 scipy >= 1.3.3
 sklearn >= 0.0
 networkx >= 2.4
